deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: srujana-appweb
  name: srujana-appweb
  namespace: srujana-final-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: srujana-appweb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: srujana-appweb
    spec:
      containers:
      - image: dockersrujana/srujanaweb:sec-check19
        name: srujanaweb
        ports:
        - containerPort: 80
        resources: {}
status: {}
